@@ -43,12 +43,13 @@ import java.util.stream.Collectors;
 @AllArgsConstructor
 public class JsonPathFilterEvaluationEngine<C extends JsonEvalContext> implements FilterVisitor<Boolean> {
 
-    private static final TypeRef<List<Number>> NUMBER_TYPE_REF = new TypeRef<List<Number>>() {
+    private static final TypeRef<List<Number>> NUMBER_TYPE_REF = new TypeRef<>() {
     };
-    private static final TypeRef<List<String>> STRING_TYPE_REF = new TypeRef<List<String>>() {
+    private static final TypeRef<List<String>> STRING_TYPE_REF = new TypeRef<>() {
     };
-    private static final TypeRef<List<Object>> OBJECT_TYPE_REF = new TypeRef<List<Object>>() {
+    private static final TypeRef<List<Object>> OBJECT_TYPE_REF = new TypeRef<>() {
     };
+    public static final String BONSAI_FILTER_VALUES_DOCUMENT_LOG_STR = "[bonsai][{}] filter:{} values:{} document:{}";
 
     protected final String entityId;
 
@@ -107,7 +108,8 @@ public class JsonPathFilterEvaluationEngine<C extends JsonEvalContext> implement
     public Boolean visit(MissingFilter filter) {
         List<Object> values = context.documentContext().read(filter.getField(), OBJECT_TYPE_REF);
         if (log.isTraceEnabled()) {
-            log.trace("[bonsai][{}] filter:{} values:{} document:{}", context.id(), filter.getField(), values, context.documentContext().json());
+            log.trace(BONSAI_FILTER_VALUES_DOCUMENT_LOG_STR, context.id(), filter.getField(), values,
+                    context.documentContext().json());
         }
         return values == null || values.isEmpty() || values.stream().allMatch(Objects::isNull);
     }
@@ -123,7 +125,8 @@ public class JsonPathFilterEvaluationEngine<C extends JsonEvalContext> implement
     public Boolean visit(ExistsFilter filter) {
         List<Object> values = context.documentContext().read(filter.getField(), OBJECT_TYPE_REF);
         if (log.isTraceEnabled()) {
-            log.trace("[bonsai][{}] filter:{} values:{} document:{}", context.id(), filter.getField(), values, context.documentContext().json());
+            log.trace(BONSAI_FILTER_VALUES_DOCUMENT_LOG_STR, context.id(), filter.getField(), values,
+                    context.documentContext().json());
         }
         return isNotEmpty(values);
     }
@@ -188,10 +191,10 @@ public class JsonPathFilterEvaluationEngine<C extends JsonEvalContext> implement
     private <T> List<T> nonNullValues(Filter filter, TypeRef<List<T>> typeRef) {
         List<T> values = context.documentContext().read(filter.getField(), typeRef);
         if (log.isTraceEnabled()) {
-            log.trace("[bonsai][{}] filter:{} values:{} document:{}", context.id(), filter.getField(), values, context.documentContext().json());
+            log.trace(BONSAI_FILTER_VALUES_DOCUMENT_LOG_STR, context.id(), filter.getField(), values,
+                    context.documentContext().json());
         }
-        return values == null ? Collections.emptyList() : values.stream().filter(Objects::nonNull)
-                .collect(Collectors.toList());
+        return values == null ? Collections.emptyList() : values.stream().filter(Objects::nonNull).toList();
     }
 
     private Predicate<Number> lessThan(NumericBinaryFilter filter) {
